# pyexample

./: .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  azure-pipelines.yml  config.yaml.example  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
core/: config.py  space.py
docs/: index.html
scripts/: db_setup.py
tests/: __init__.py  test_space.py
