[metadata]
name = pyexample
version = 0.0.1
description = An example Python project to provide a template for reuse
long_description = file: README.md
keywords = python, tutorial, example, template
license = MIT License
url = https://github.com/tomfitzherbert/pyexample
author = Tom Fitzherbert
author_email = tom@viabledata.co.uk

[metadata.classifiers]
Development Status :: 3 - Alpha
Intended Audience :: Developers
License :: OSI Approved :: MIT License
Programming Language :: Python :: 3.5
Topic :: Software Development

[options]
packages = find:
scripts =
  scripts/db_setup.py
install_requires = markdown

[bdist_wheel]
universal=1

[aliases]
test=pytest
